# PortalCredits

./: .gitignore  CMakeLists.txt  README.md
doc/: Build.md
include/PortalCredits/: App.hpp  ConsoleHandler.hpp  DrawHandler.hpp  InputHandler.hpp  Resources.hpp  SoundHandler.hpp  SystemHandler.hpp  Util.hpp  WinInclude.hpp
res/: About.txt  Conditions.txt  Credits.txt  License.txt  Lyrics.txt  Menu.txt  Symbols.txt  Timing.txt  Title.txt  Warranty.txt
src/: Main.cpp
src/PortalCredits/: App.cpp  AppHandlers.cpp  ConsoleHandler.cpp  DrawHandler.cpp  InputHandler.cpp  LoopHandlers.cpp  RenderHandlers.cpp  SoundHandler.cpp  Symbols.cpp  SystemHandler.cpp  Util.cpp
src/Script/: GenerateResources.py  GenerateSong.py
